# src/routers/folder.router.ts
@@ -6,6 +6,7 @@ import {
   deleteFolder,
   getFolderById,
   getFolders,
+  getMessagesByFolderId,
   updateFolder,
 } from "../controllers/folder.controller";
 
@@ -30,6 +31,13 @@ folderRouter.delete(
   authMiddleware,
   uuidValidationMiddleware,
   deleteFolder
+);
+
+folderRouter.get(
+  "/:id/messages",
+  authMiddleware,
+  uuidValidationMiddleware,
+  getMessagesByFolderId
 );
 
 export default folderRouter;
